<resources>
    <string name="app_name">WMS</string>
    <string name="default_base_server_path">http://gi.bitfinity.ir/mobile/v1/</string>

    <string name="login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_server_path">Server</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >= 6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">"Home"</string>
    <string name="nav_header_desc">"nav_header_desc"</string>
    <string name="nav_header_title">"nav_header_title"</string>
    <string name="nav_header_subtitle">"nav_header_subtitle"</string>
    <string name="menu_home">Home</string>
    <string name="action_settings">"action_settings"</string>
    <string name="picking">Picking</string>
    <string name="shipping">Shipping</string>
    <string name="transfer">Transfer</string>
    <string name="putaway">Putaway</string>
    <string name="receiving">Receiving</string>
    <string name="inventory">Inventory</string>
    <string name="report">Report</string>
    <string name="logout">Logout</string>
    <string name="fullname">FullName</string>
    <string name="title_activity_receiving_details">ReceivingDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mobile">Mobile</string>
    <string name="warehouse_management_system">Warehouse Management System</string>
    <string name="default_user">1093</string>
    <string name="default_password">123456</string>
    <string name="bitfinity">BitFinity</string>
    <string name="copy_right">Copy Right</string>
    <string name="driverfullname">DriverFullName</string>
    <string name="dockcode">DockCode</string>
    <string name="no_receiving_found">No Receiving Found.</string>
    <string name="receiving_number">ReceivingNumber</string>
    <string name="container_number">ContainerNumber</string>
    <string name="created_on">CreatedOn</string>
    <string name="car_type_title">CarTypeTitle</string>
    <string name="Iran">ایران</string>
    <string name="you_have_0_items">You Have 0 Items</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="count">Count</string>
    <string name="serial_scan">Serial Scan</string>
    <string name="input_serial">Input Serial</string>
    <string name="serials">Serials</string>
</resources>